added colouring of grid

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
     </div>
 
+    <div class="buttons">
+    <button id="reset"> Reset </button>
+    <button id="erase"> Erase </button>
+</div>
+
 </body>
 
 </html>
