finished colour picker

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="buttons">
     <button id="reset"> Reset </button>
     <button id="erase"> Erase </button>
+    <input  id = "picker" type = "color"/>
 </div>
 
 </body>
